syntax = "proto3";

package pb;

import "user.proto";

option go_package = "blog_api/pb";

message ListUserRequest {
    int64 page_id = 1;
    int64 page_size = 2;
}

message ListUserResponse {
    repeated User user = 1;
    int64 total = 2;
}
